added dish page

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,8 @@
     <div class="row">
       <div class="col l7 s12">
 
-        <h1 class="white-text">WHATS ON THE MENU TODAY?</h1>
+        <h1 class="white-text">WHAT'S ON THE MENU TODAY?</h1>
         <br>
-
         
         <div >
           <form autocomplete="off" class="white-text">
