--- a/public/dish.html
+++ b/public/dish.html
@@ -17,26 +17,52 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <title></title>
-  <link rel="fav icon" type="image/png" href="/links/Platters and Pantries">
+  <link rel="fav icon" type="image/png" href="">
 </head>
+<header>
+    <nav>
+      <div class="nav-wrapper black">
+        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+        <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <!-- <ul class="right hide-on-med-and-down">
+          <li class="waves-effect waves-light"><a>home</a></li>
+          <li class="waves-effect waves-light"><a>pantry</a></li>
+          <li class="waves-effect waves-light"><a>about</a>
+          </li>
+        </ul> -->
+      </div>
+    </nav>
 
+    <!-- <ul class="sidenav black white-text" id="mobile">
+      <li><a class="white-text">home</a></li>
+      <li><a class="white-text">pantry</a></li>
+      <li><a class="white-text">about</a></li>
+    </ul> -->
+
+  </header>
 <body>
-  <div class="chef-image">
+  <div class="dish-image">
   <main>
     <div class="row ">
-      <div class="col l12 s12 margin-top-25pc">
-        <img href="#" class="brand-logo logo center-page" src="./links/Platters and Pantries.png">
-        <a class="waves-effect waves-light btn center-page">login</a>
-        <div class="center-page"    
-        <div class="input-field col l12 s12 ">
-              <input value="" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">User Name</label>
-              <input value="" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">Password</label>
-          </div>
+      <div class="col l6 s12 margin-top-15pc">
+     <div class="vl"><h2> Vegan Salad Bowl with Tomatos and Veggies</h2></div>
+     <p> Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl with Tomatos and Veggies</p>
+     <h5> Ingredients</h5>
+     <ul>
+         <li> 1 table spoon salt</li>
+         <li> 3 large tomatos</li>
+         <li> 1 Cup romaine lettuce</li>
+         <li> 1 Cup arugula</li>
+     </ul>
       </div>
+ 
+        <div class="col l6 s12 ">
+            <img class="salad" src="./links/salad.png"  alt="salad" />
+            <p class="center"> Add Ingredients to shopping list</p>
+            <a class="waves-effect waves-light btn center-50pc">add to list</a>
+        </div>
+      </div> 
     </div>    
-    </div>
       </main>
 
   <!--Scripts Go Here-->
