--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
           <br>
 
           <div>
-            <form autocomplete="off" class="white-text">
-              <div class="input-field">
+            <form autocomplete="off">
+              <div class="input-field searchbar">
                 <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text">
-                <label for="location">Search</label>
+                <label>Search</label>
                 <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
                 </input>
               </div>
@@ -69,9 +69,9 @@
           </div>
 
 
-          <h2 class="white-text std-padding-left">Top Chicken Recipes</h2>
+          <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
 
-          <div class="card-container col s12 flow-text">
+          <div class="card-container flex-container  col s12 flow-text">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="./links/chicken.jpg">
@@ -108,7 +108,7 @@
         </div>
         <div class="col l4 s12 flow-text ">
         
-            <ul class="collection with-header ">
+            <ul class="collection with-header">
               <li class="collection-header"><h4 class="align">Grocery List</h4> <h6 class="align float-right">Add to Pantry</h6></li>
               <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
               <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
