--- a/public/login.html
+++ b/public/login.html
@@ -25,9 +25,9 @@
   <main>
     <div class="row ">
       <div class="col l12 s12 margin-top-25pc">
-        <img href="#" class="brand-logo logo center-page" src="./links/Platters and Pantries.png">
-        <a class="waves-effect waves-light btn center-page">login</a>
-        <div class="center-page"    
+        <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
+        <a class="waves-effect waves-light btn center-25pc">login</a>
+        <div class="center-25pc"    
         <div class="input-field col l12 s12 ">
               <input value="" id="first_name2" type="text" class="validate">
               <label class="active" for="first_name2">User Name</label>
