--- a/public/index.html
+++ b/public/index.html
@@ -129,6 +129,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
       integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./js/recipeLookup.js"></script>
 </body>
 
 <footer>
