05/05/2022 Live Share stuff - routes and api done

--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
           <div>
             <form autocomplete="off">
               <div class="input-field searchbar">
-                <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text">
-                <label>Search</label>
+                <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text" placeholder="Search">
+                <a id="search-dish"class="waves-effect waves-light btn">Search</a>
                 <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
                 </input>
               </div>
