adding new page

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,10 @@
 </head>
 
 <body>
+  <div class="chef-image">
   <header>
-    <nav>
-      <div class="nav-wrapper black">
+    <nav class="transparent">
+      <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <!-- <ul class="right hide-on-med-and-down">
@@ -42,19 +43,18 @@
     </ul> -->
 
   </header>
-  <div class="chef-image">
     <main>
       <div class="row">
-        <div class="col l8 s12">
+        <div class="col l9 s12">
 
-          <h1 class="white-text">WHAT'S ON THE MENU TODAY?</h1>
+          <h1 class="white-text">WHAT'S ON <br>THE MENU TODAY?</h1>
           <br>
 
           <div>
-            <form autocomplete="off">
+            <form autocomplete="off" >
               <div class="input-field searchbar">
                 <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text" placeholder="Search">
-                <a id="search-dish"class="waves-effect waves-light btn">Search</a>
+                <a id="search-dish"class="waves-effect waves-light btn white-text">Search</a>
                 <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
                 </input>
               </div>
@@ -106,10 +106,11 @@
 
 
         </div>
-        <div class="col l4 s12 flow-text ">
+        <div class="col l3 s12 flow-text ">
         
-            <ul class="collection with-header">
-              <li class="collection-header"><h4 class="align">Grocery List</h4> <h6 class="align float-right">Add to Pantry</h6></li>
+            <ul class="collection with-header list">
+              <h2>Grocery List</h2>
+              <li class="collection-header"><h6 class="align">Add to <br> Pantry</h6></li>
               <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
               <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
               <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
