--- a/public/dish.html
+++ b/public/dish.html
@@ -19,51 +19,44 @@
   <title></title>
   <link rel="fav icon" type="image/png" href="">
 </head>
-<header>
-    <nav>
-      <div class="nav-wrapper black">
-        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
-        <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <!-- <ul class="right hide-on-med-and-down">
-          <li class="waves-effect waves-light"><a>home</a></li>
-          <li class="waves-effect waves-light"><a>pantry</a></li>
-          <li class="waves-effect waves-light"><a>about</a>
-          </li>
-        </ul> -->
-      </div>
-    </nav>
 
-    <!-- <ul class="sidenav black white-text" id="mobile">
-      <li><a class="white-text">home</a></li>
-      <li><a class="white-text">pantry</a></li>
-      <li><a class="white-text">about</a></li>
-    </ul> -->
-
-  </header>
 <body>
   <div class="dish-image">
-  <main>
-    <div class="row ">
-      <div class="col l6 s12 margin-top-15pc">
-     <div class="vl"><h2> Vegan Salad Bowl with Tomatos and Veggies</h2></div>
-     <p> Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl with Tomatos and Veggies</p>
-     <h5> Ingredients</h5>
-     <ul>
-         <li> 1 table spoon salt</li>
-         <li> 3 large tomatos</li>
-         <li> 1 Cup romaine lettuce</li>
-         <li> 1 Cup arugula</li>
-     </ul>
-      </div>
- 
-        <div class="col l6 s12 ">
-            <img class="salad" src="./links/salad.png"  alt="salad" />
+    <div class="transparent-grey">
+      <header>
+        <nav class="transparent">
+          <div class="nav-wrapper">
+            <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+            <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          </div>
+        </nav>
+      </header>
+      <main>
+        <div class="row">
+          <div class="col l6 s12 margin-top-15pc">
+            <div class="vl">
+              <h2> Vegan Salad Bowl with Tomatos and Veggies</h2>
+            </div>
+            <p> Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl with Tomatos and Veggies. Vegan Salad Bowl
+              with Tomatos and Veggies</p>
+            <h5> Ingredients</h5>
+            <ul>
+              <li> 1 table spoon salt</li>
+              <li> 3 large tomatos</li>
+              <li> 1 Cup romaine lettuce</li>
+              <li> 1 Cup arugula</li>
+            </ul>
+          </div>
+
+          <div class="col l6 s12 ">
+            <img class="salad" src="./links/salad.png" alt="salad" />
             <p class="center"> Add Ingredients to shopping list</p>
             <a class="waves-effect waves-light btn center-50pc">add to list</a>
+          </div>
         </div>
-      </div> 
-    </div>    
-      </main>
+    </div>
+    </main>
+  </div>
 
   <!--Scripts Go Here-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -72,8 +65,5 @@
     integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
-
-<footer>
-</footer>
 
 </html>
