--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  <title></title>
+  <title>Platters and Pantries</title>
   <link rel="fav icon" type="image/png" href="/links/Platters and Pantries">
 </head>
 
@@ -27,20 +27,22 @@
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <!-- <ul class="right hide-on-med-and-down">
-          <li class="waves-effect waves-light"><a>home</a></li>
-          <li class="waves-effect waves-light"><a>pantry</a></li>
-          <li class="waves-effect waves-light"><a>about</a>
+        <ul class="right hide-on-med-and-down">
+          <li class="waves-effect waves-light"><a href="/login">Login</a></li>
+          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+          <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+          <li class="waves-effect waves-light"><a href="/about">About</a>
           </li>
-        </ul> -->
+        </ul>
       </div>
     </nav>
 
-    <!-- <ul class="sidenav black white-text" id="mobile">
-      <li><a class="white-text">home</a></li>
-      <li><a class="white-text">pantry</a></li>
-      <li><a class="white-text">about</a></li>
-    </ul> -->
+    <ul class="sidenav black white-text" id="mobile">
+      <li><a class="white-text" href="/login">Login</a></li>
+      <li><a class="white-text" href="/home">Home</a></li>
+      <li><a class="white-text" href="/recipes">Recipes</a></li>
+      <li><a class="white-text" href="/about">About</a></li>
+    </ul>
 
   </header>
     <main>
