login functionality connected

--- a/public/login.html
+++ b/public/login.html
@@ -28,12 +28,13 @@
         <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
         <div class="center-25pc"    
         <div class="input-field col l12 s12 ">
-          <input value="" id="first_name2" type="text" class="validate">
-          <label class="active" for="first_name2">User Name</label>
+          <input value="" id="login-email" type="text" class="validate">
+          <label class="active" for="login-email">Email</label>
           <input value="" id="first_name2" type="text" class="validate">
           <label class="active" for="first_name2">Password</label>
         </div>
         <a class="waves-effect waves-light btn center-25pc">login</a>
+        
       </div>
     </div>    
     </div>
