--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   </header>
     <main>
       <div class="row">
-        <div class="col l9 s12">
+        <div class="col l12 s12">
 
           <h1 class="white-text">WHAT'S ON <br>THE MENU TODAY?</h1>
           <br>
@@ -69,11 +69,11 @@
               </div>
             </form>
           </div>
-
+          <div class="row">
 
           <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
 
-          <div class="card-container flex-container  col s12 flow-text">
+          <div class="card-container flex-container col s12 flow-text ">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="./links/chicken.jpg">
@@ -95,6 +95,70 @@
               </div>
             </div>
             <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="./links/chicken.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+                    class="material-icons right">more_vert</i></span>
+                <p><a href="#">Ingredients</a></p>
+              </div>
+            </div> <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
                 <img class="activator" src="./links/chicken.jpg">
               </div>
@@ -108,32 +172,6 @@
 
 
         </div>
-        <div class="col l3 s12 flow-text ">
-        <div  id="hideGrocery">
-            <ul class="collection with-header list">
-              <h2>Grocery List</h2>
-              <li class="collection-header"><h6 class="align">Add to <br> Pantry</h6></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-            </ul>
-         <div>
-          <button onclick="showPantry()"class="waves-effect waves-light btn center-100pc">VIEW MY PANTRY</button>
-         </div>
-        </div>
-        <div style="display: none;" id="showPantry" >
-         <ul class="collection with-header list">
-           <h2>Pantry List</h2>
-           <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-           <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-           <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-           <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-         </ul>
-         <button class="waves-effect waves-light btn center-100pc">VIEW GROCERY LIST</button>
-        </div>
-       
-        
 
     </div>
       </div>
