--- a/public/shoppingpage.html
+++ b/public/shoppingpage.html
@@ -93,6 +93,7 @@
       integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/recipeLookup.js"></script>
+    <script src="./js/shoppingList.js"></script>
 </body>
 
 <footer>
