--- a/public/about.html
+++ b/public/about.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div class="chef-image">
+  <div class="">
   <header>
     <nav class="transparent">
       <div class="nav-wrapper">
@@ -45,69 +45,38 @@
       <!-- <li><a class="white-text" href="/pantry">Pantry</a></li> -->
     </ul>
   </header>
-    <main>
-      <div class="row">
-        <div class="col l12 s12">
 
-          <h1 class="white-text">WHAT'S ON <br>THE MENU TODAY?</h1>
-          <br>
-
-          <div>
-            <form autocomplete="off" >
-              <div class="input-field searchbar">
-                <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text" placeholder="Search">
-                <a id="search-dish"class="waves-effect waves-light btn white-text">Search</a>
-                <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
-                </input>
-              </div>
-              <div>
-                <a class="waves-effect waves-light btn">BURGERS</a>
-                <a class="waves-effect waves-light btn">SALAD</a>
-                <a class="waves-effect waves-light btn">PIZZA</a>
-                <a class="waves-effect waves-light btn">SUSHI</a>
-                <a class="waves-effect waves-light btn">VEGAN</a>
-              </div>
-            </form>
-          </div>
-          <div class="row">
-
-          <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
-
-          <div class="card-container flex-container col s12 flow-text ">
-            <form action="storedrecipes.html">
-            <div class="card" id="addtostore">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div>
-          </form>
-
-            <!-- <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div> -->
-            </div>
-          </div>
-
-
-        </div>
-
+  <main>
+    <div class="row">
+    <div class="col l6 s12 ">
+    <h1 class="white-text">About Us</h1>
+        <h5 class="flow-text white-text light-weight">
+            <p>
+                We are the Pleasant Pantry Professionals. We are a group of 4 Junior Norhwestern Web Developers. With our combine skillset, our application was built using Materialize CSS and Edamam API. With this app we wanted to allow users to create a shopping list based on a recipe that they searched. They can add and remove items from a grocery list to allow them to customize their personal shopping items for a delicious home made meal experience. Happy Eating! 
+            </p>
+        </h5>
+        
     </div>
+    </div>
+  </main>
+  <!-- <div class="card-container flex-container col l6 s12 flow-text ">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="">
       </div>
-    </main>
-
-
+      <div class="card-content">
+          <h4><b>Lea</b></h4>
+          <h5>
+              Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to broaden my skillsets on a different platform and learn the user interface and user experience side of web development.  
+          </h5>
+        </div>
+        <div class="card-action">
+          <a class="btn-flat center" href="https://github.com/lealinnea">Github</a>
+          <a class="btn-flat center" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+          <a class="btn-flat center" href="https://www.linkedin.com/in/lea-guerrero-020516174/">LinkedIn</a>
+        </div>
+      </div>
+    </div> -->
     <!--Scripts Go Here-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
