--- a/public/dish.html
+++ b/public/dish.html
@@ -51,7 +51,7 @@
           <div class="col l6 s12 ">
             <img class="salad" src="./links/salad.png" alt="salad" />
             <p class="center"> Add Ingredients to shopping list</p>
-            <a class="waves-effect waves-light btn center-50pc">add to list</a>
+            <a class="waves-effect waves-light btn center-50pc"onclick="passCards()">add to list</a>
           </div>
         </div>
     </div>
