--- a/public/storedrecipes.html
+++ b/public/storedrecipes.html
@@ -45,68 +45,19 @@
       <!-- <li><a class="white-text" href="/pantry">Pantry</a></li> -->
     </ul>
   </header>
-    <main>
-      <div class="row">
-        <div class="col l12 s12">
+  <main>
+    <div class="row">
+        <h1 class="white-text">Your Saved Recipes</h1>
+        <div class="row">
+             <div class="card-container flex-container col s12 flow-text ">
 
-          <h1 class="white-text">WHAT'S ON <br>THE MENU TODAY?</h1>
-          <br>
-
-          <div>
-            <form autocomplete="off" >
-              <div class="input-field searchbar">
-                <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text" placeholder="Search">
-                <a id="search-dish"class="waves-effect waves-light btn white-text">Search</a>
-                <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
-                </input>
+            <span id="addcard"></span>
+            
               </div>
-              <div>
-                <a class="waves-effect waves-light btn">BURGERS</a>
-                <a class="waves-effect waves-light btn">SALAD</a>
-                <a class="waves-effect waves-light btn">PIZZA</a>
-                <a class="waves-effect waves-light btn">SUSHI</a>
-                <a class="waves-effect waves-light btn">VEGAN</a>
-              </div>
-            </form>
           </div>
-          <div class="row">
-
-          <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
-
-          <div class="card-container flex-container col s12 flow-text ">
-            <form action="storedrecipes.html">
-            <div class="card" id="addtostore">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div>
-          </form>
-
-            <!-- <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div> -->
-            </div>
-          </div>
-
-
-        </div>
-
     </div>
-      </div>
-    </main>
-
+    </div>
+  </main>
 
     <!--Scripts Go Here-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
