--- a/public/about.html
+++ b/public/about.html
@@ -20,70 +20,114 @@
   <link rel="fav icon" type="image/png" href="/links/Platters and Pantries">
 </head>
 
-<body>
-  <div class="">
-  <header>
-    <nav class="transparent">
-      <div class="nav-wrapper">
-        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
-        <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li class="waves-effect waves-light"><a href="/login">Login</a></li>
-          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
-          <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
-          <li class="waves-effect waves-light"><a href="/about">About</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <ul class="sidenav black white-text" id="mobile">
-      <li><a class="white-text" href="/login">Login</a></li>
-      <li><a class="white-text" href="/home">Home</a></li>
-      <li><a class="white-text" href="/recipes">Recipes</a></li>
-      <li><a class="white-text" href="/about">About</a></li>
-      <!-- <li><a class="white-text" href="/pantry">Pantry</a></li> -->
-    </ul>
-  </header>
-
-  <main>
-    <div class="row">
-    <div class="col l6 s12 ">
-    <h1 class="white-text">About Us</h1>
-        <h5 class="flow-text white-text light-weight">
-            <p>
-                We are the Pleasant Pantry Professionals. We are a group of 4 Junior Norhwestern Web Developers. With our combine skillset, our application was built using Materialize CSS and Edamam API. With this app we wanted to allow users to create a shopping list based on a recipe that they searched. They can add and remove items from a grocery list to allow them to customize their personal shopping items for a delicious home made meal experience. Happy Eating! 
-            </p>
-        </h5>
-        
-    </div>
-    </div>
-  </main>
-  <!-- <div class="card-container flex-container col l6 s12 flow-text ">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="">
-      </div>
-      <div class="card-content">
-          <h4><b>Lea</b></h4>
-          <h5>
-              Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to broaden my skillsets on a different platform and learn the user interface and user experience side of web development.  
-          </h5>
+<body class="grey darken-4">
+  <div>
+    <header>
+      <nav class="transparent">
+        <div class="nav-wrapper">
+          <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+          <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li class="waves-effect waves-light"><a href="/login">Login</a></li>
+            <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+            <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+            <li class="waves-effect waves-light"><a href="/about">About</a>
+            </li>
+          </ul>
         </div>
-        <div class="card-action">
-          <a class="btn-flat center" href="https://github.com/lealinnea">Github</a>
-          <a class="btn-flat center" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
-          <a class="btn-flat center" href="https://www.linkedin.com/in/lea-guerrero-020516174/">LinkedIn</a>
-        </div>
-      </div>
-    </div> -->
-    <!--Scripts Go Here-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
-      integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/recipeLookup.js"></script>
+      </nav>
+
+      <ul class="sidenav white-text" id="mobile">
+        <li><a class="white-text" href="/login">Login</a></li>
+        <li><a class="white-text" href="/home">Home</a></li>
+        <li><a class="white-text" href="/recipes">Recipes</a></li>
+        <li><a class="white-text" href="/about">About</a></li>
+
+      </ul>
+    </header>
+    <div class="row white food2-image">
+      <main>
+        <div class="col l12 s12 ">
+          <div></div>
+
+
+          <div class="row transparent-white">
+            <main>
+              <div class="col l6 s12 ">
+                <h2 class="black-text ">About Us</h2>
+                <h3 class="black-text light-weight">
+                  We are the Pleasant Pantry Professionals. We are a group of 4 Junior Northwestern Web Developers. With
+                  our combine skillset, our application was built using Materialize CSS and Edamam API. With this app we
+                  wanted to allow users to create a shopping list based on a recipe that they searched. They can add and
+                  remove items from a grocery list to allow them to customize their personal shopping items for a
+                  delicious home made meal experience. <br>Happy Eating!
+
+                </h3>
+              </div>
+              <div class="col l6 s12 ">
+                <div class="food-image"></div>
+              </div>
+          </div>
+          <div class="row">
+            <main>
+              <div class="center-100pc flex-container col l3 s12 flow-text ">
+                <div>
+                  <h4><b>Lea</b></h4>
+                  <h5 class="white-text">
+                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                    broaden my skillsets on a different platform and learn the user interface and user experience side
+                    of web development.
+                  </h5>
+                </div>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+              </div>
+              <div class="center-100pc flex-container col l3 s12 flow-text ">
+                <div>
+                  <h4><b>Theo</b></h4>
+                  <h5 class="white-text">
+                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                    broaden my skillsets on a different platform and learn the user interface and user experience side
+                    of web development.
+                  </h5>
+                </div>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+              </div>
+              <div class="center-100pc flex-container col l3 s12 flow-text ">
+                <div>
+                  <h4><b>Abeer</b></h4>
+                  <h5 class="white-text">
+                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                    broaden my skillsets on a different platform and learn the user interface and user experience side
+                    of web development.
+                  </h5>
+                </div>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+              </div>
+              <div class="center-100pc flex-container col l3 s12 flow-text ">
+                <div>
+                  <h4><b>Will</b></h4>
+                  <h5 class="white-text">
+                    Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
+                    broaden my skillsets on a different platform and learn the user interface and user experience side
+                    of web development.
+                  </h5>
+                </div>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://github.com/lealinnea">Github</a>
+                <a class="btn-flat deep-orange-text darken-2-text" href="https://lealinnea.github.io/portfolio/">Portfolio</a>
+              </div>
+
+          </div>
+      </main>
+      <!--Scripts Go Here-->
+      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
+        integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script src="./js/recipeLookup.js"></script>
 </body>
 
 <footer>
