--- a/public/storedrecipes.html
+++ b/public/storedrecipes.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div class="chef-image">
+  <div class="logo-image">
   <header>
     <nav class="transparent">
       <div class="nav-wrapper">
@@ -47,7 +47,7 @@
   </header>
   <main>
     <div class="row">
-        <h1 class="white-text">Your Saved Recipes</h1>
+        <h2 class="grey-text text-lighten-3 center padding-t120">Your Saved Recipes</h2>
         <div class="row">
              <div class="card-container flex-container col s12 flow-text ">
 
