--- a/public/shoppingpage.html
+++ b/public/shoppingpage.html
@@ -90,17 +90,17 @@
             </ul>
           </div>
         </div>
+      </div>
     </main>
-
-
-    <!--Scripts Go Here-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
-      integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/recipeLookup.js"></script>
-    <script src="./js/shoppingList.js"></script>
+  </div>
+  <!--Scripts Go Here-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
+    integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="./js/recipeLookup.js"></script>
+  <script src="./js/shoppingList.js"></script>
 </body>
 
 <footer>
