added abeer image

--- a/public/about.html
+++ b/public/about.html
@@ -98,7 +98,7 @@
               </div>
               <div class="center-100pc flex-container col l3 s12 flow-text ">
                 <div>
-                  <img src="./links/team images/Theo.jpg" alt="image of lea" width="200" height="200">
+                  <img src="./links/team images/Abeer.jpg" alt="image of lea" width="200" height="200">
                   <h4><b>Abeer</b></h4>
                   <h5 class="white-text">
                     Hey, It's Lea. Design is my passion whether its the creation of print or web. I am excited to
